ngZorro Installed and integrated sample button able to load

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,7 @@
       "@nx-admin-portal/features/feature-shell": [
         "src/libs/features/feature-shell/src/index.ts"
       ],
-      "@nx-admin-portal/shared": ["src/libs/shared/src/index.ts"]
+      "@nx-admin-portal/shared": ["src/libs/shared/src/index.ts"],
     }
   },
   "exclude": ["node_modules", "tmp"]
