--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/forms": "20.3.15",
     "@angular/platform-browser": "20.3.15",
     "@angular/router": "20.3.15",
+    "ng-zorro-antd": "^20.4.3",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
