--- a/project.json
+++ b/project.json
@@ -24,6 +24,7 @@
         ],
         "styles": [
           "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+          "libs/shared/src/lib/styles/main.scss",
           "./src/styles.scss"
         ]
       },
